History of this buildout
========================

6.0.0 (unreleased)
------------------

- Integrating contact page including migration of image.
  [diederik]

- Improve styling of document_view and move it to the browser folder.
  [jladage]

- Improve fileattachment tile in faceted navigation.
  [jladage]

- Made reference browser widget results less high.  They were flowing
  below the page.  MINA-96.  [maurits]

- Added upgrade step to update the catalog metadata, meant for the
  getIcon column.  [maurits]

- Create a viewlet for related documents in below-content.
  [jladage]

- Added ThemeReferenceMixin for projects.  MINA-92.  [maurits]

- Cleanup skins folder, removed old listing views and remove an
  adapter which selected the correct listing view on a folder based
  on it's parent. [jladage]

- Add dates to faceted results of Advisory and Study.
  [jladage]

- Remove email subscribers code. [jladage]

- Implement Document view.
  [jladage]

- Added own faceted type widget.  You need to import the
  faceted_criteria.xml from the buildout directory.  [maurits]

- If no years or no prev/next, don't display the box.
  [jladage]

- Restore form handling for subscribing to Hearings or Events.
  [jladage]

- Fix year query. Didn't understand the part of getting the index
  from self.data, set it to effective hardcode, since thats what
  this widget should filter on. [jladage]

- Integrate Study and migrate foto field to ImageAttachment.
  [jladage]

- Fix image rendering of Recent Documents on theme_list page.
  [jladage]

- Fix html of facet previews. [jladage]

- Integrate Hearing detail view and refactored foto migration.
  [jladage]

- Integrate MREvent detail view and migrate foto field to
  ImageAttachement. [jladage]

- Integrated Themes list, with current theme highlighted.
  [jladage]

- Refactor out getToolByName. [jladage]

- refactor method names to as_it_should().

- Custom prevnext implementation which browsers between items within