@@ -16,7 +16,7 @@
    <property name="hidden">0</property>
    <property name="index">SearchableText</property>
    <property name="default"></property>
-   <property name="onlyallelements"></property>
+   <property name="onlyallelements">1</property>
    <property name="wildcard">1</property>
   </criterion>
   <criterion name="c0">
@@ -55,8 +55,8 @@
    <property name="section">default</property>
    <property name="hidden">0</property>
    <property name="count">1</property>
-   <property name="sortcountable">0</property>
-   <property name="hidezerocount">0</property>
+   <property name="sortcountable"></property>
+   <property name="hidezerocount"></property>
    <property name="maxitems">50</property>
    <property name="default">
     <element value="Advisory"/>
