@@ -4,6 +4,10 @@ History of this buildout
 6.0.0 (unreleased)
 ------------------
 
+- Hidden the option in faceted search to restrict the text search to
+  the current search results.  You need to import the faceted settings
+  again, or run the import step that does this.  MINA-97.  [maurits]
+
 - Integrating contact page including migration of image.
   [diederik]
 
